# thought_tree

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  main.py  pyproject.toml
backend/: .env.example  Dockerfile  alembic.ini  langgraph.json  main.py
backend/agents/agent/: context.py  graph.py  prompts.py  state.py  tools.py  utils.py
backend/api/: chat_routes.py  file_routes.py  user_routes.py
backend/core/: config.py  database.py  general_serializer.py  orm.py  security.py  sse.py
backend/migrations/: env.py
backend/migrations/versions/: 7694fe2276c8_initial_tables.py  a1b2c3d4e5f6_add_file_upload_tables.py
backend/misc/: active_runs.py  utils.py
backend/models/: assistants.py  files.py  runs.py  threads.py  users.py
backend/services/: broker.py  email_service.py  embedding_service.py  event_converter.py  event_store.py  file_processor.py  langgraph_service.py  password_reset_store.py  rag_service.py  streaming_service.py  thread_state_service.py  user_services.py
backend/utils/: user_utils.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPage.tsx  ErrorBoundary.tsx  GraphVisualization.tsx  LoginPage.tsx  MindmapVisualization.tsx  SequenceVisualization.tsx  StructureSelector.tsx  TimelineVisualization.tsx  UserProfilePage.tsx  VisualizationCanvas.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  auth.ts
