[project]
name = "thought-tree"
version = "0.1.0"
description = "AI powered Visualization"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "aiosmtplib>=3.0.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.121.0",
    "feedparser>=6.0.12",
    "langchain>=1.0.3",
    "langchain-core>=1.0.3",
    "langchain-google-genai>=3.0.1",
    "langchain-google-vertexai>=3.0.2",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "langgraph-checkpoint-postgres==2.0.23",
    "passlib>=1.7.4",
    "pre-commit>=4.4.0",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "openai>=1.0.0",
    "ruff>=0.14.5",
    "sqlalchemy>=2.0.44",
    "structlog>=25.5.0",
    "psycopg2-binary>=2.9.11",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.20",
    "pgvector>=0.3.0",
    "tiktoken>=0.8.0",
]
